error.txt
PS C:\Users\kousu\workspace\bevy-online-campus> cargo build --release
   Compiling bevy-online-campus v0.1.0 (C:\Users\kousu\workspace\bevy-online-campus)
error[E0277]: `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...)` does not describe a valid system configuration
   --> src\main.rs:169:30
    |
169 |           .add_systems(Update, (
    |  __________-----------_________^
    | |          |
    | |          required by a bound introduced by this call
170 | |             handle_focus_events,
171 | |             cursor_lock_controls,
172 | |             mouse_look_system,
...   |
189 | |             scaffold_input_system,
190 | |         ))
    | |_________^ invalid system configuration
    |
    = help: the trait `IntoSystemConfigs<_>` is not implemented for `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...)`
    = help: the following other types implement trait `IntoSystemConfigs<Marker>`:
              `(S0, S1)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1)>`
              `(S0, S1, S2)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2)>`
              `(S0, S1, S2, S3)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2, P3)>`
              `(S0, S1, S2, S3, S4)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2, P3, P4)>`
              `(S0, S1, S2, S3, S4, S5)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2, P3, P4, P5)>`
              `(S0, S1, S2, S3, S4, S5, S6)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2, P3, P4, P5, P6)>`
              `(S0, S1, S2, S3, S4, S5, S6, S7)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2, P3, P4, P5, P6, P7)>`      
              `(S0, S1, S2, S3, S4, S5, S6, S7, S8)` implements `IntoSystemConfigs<(SystemConfigTupleMarker, P0, P1, P2, P3, P4, P5, P6, P7, P8)>`
            and 12 others
note: required by a bound in `bevy::prelude::App::add_systems`
   --> C:\Users\kousu\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_app-0.14.2\src\app.rs:287:23
    |
284 |     pub fn add_systems<M>(
    |            ----------- required by a bound in this associated function
...
287 |         systems: impl IntoSystemConfigs<M>,
    |                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `App::add_systems`
    = note: the full name for the type has been written to 'C:\Users\kousu\workspace\bevy-online-campus\target\release\deps\bevy_online_campus.long-type-18391968822924534165.txt'
    = note: consider using `--verbose` to print the full type name to the console

warning: use of deprecated associated function `bevy::prelude::Color::rgba`: Use `Color::srgba` instead
    --> src\main.rs:1014:74
     |
1014 | ...                   background_color: BackgroundColor(Color::rgba(0.8, 0.0, 0.0, 0.35)),
     |                                                                ^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated associated function `bevy::prelude::Color::rgba`: Use `Color::srgba` instead
    --> src\main.rs:1192:28
     |
1192 |             col.0 = Color::rgba(0.8, 0.0, 0.0, 0.35 * t);
     |                            ^^^^

warning: unused variable: `pos`
   --> src\bin\server.rs:511:22
    |
511 |         if let Some((pos, t)) = wander.0.get_mut(id) { *t -= dt; }
    |                      ^^^ help: if this is intentional, prefix it with an underscore: `_pos`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0499]: cannot borrow `scaffolds` as mutable more than once at a time
   --> src\bin\server.rs:698:13
    |
694 |         let entry = scaffolds.per_owner.entry(owner).or_default();
    |                     --------- first mutable borrow occurs here
...
698 |             scaffolds.by_id.remove(&old);
    |             ^^^^^^^^^ second mutable borrow occurs here
...
712 |         entry.push(sid);
    |         ----- first borrow later used here

warning: unused variable: `forward`
   --> src\bin\server.rs:827:13
    |
827 |         let forward = Quat::from_rotation_y(b.yaw) * Vec3::NEG_Z;
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_forward`

warning: unused variable: `t_hit`
   --> src\bin\server.rs:841:30
    |
841 |         if let Some((hit_id, t_hit)) = best {
    |                              ^^^^^ help: if this is intentional, prefix it with an underscore: `_t_hit`

warning: value assigned to `new_yaw` is never read
   --> src\main.rs:334:13
    |
334 |     let mut new_yaw: f32 = 0.0;
    |             ^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` on by default

warning: variable `new_pitch` is assigned to, but never used
   --> src\main.rs:335:13
    |
335 |     let mut new_pitch: f32 = 0.0;
    |             ^^^^^^^^^
    |
    = note: consider using `_new_pitch` instead
    = note: `#[warn(unused_variables)]` on by default

warning: value assigned to `new_pitch` is never read
   --> src\main.rs:342:9
    |
342 |         new_pitch = pcam.pitch;
    |         ^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: value assigned to `new_yaw` is never read
   --> src\main.rs:506:13
    |
506 |     let mut new_yaw = 0.0f32;
    |             ^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: value assigned to `new_pitch` is never read
   --> src\main.rs:507:13
    |
507 |     let mut new_pitch = 0.0f32;
    |             ^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: variable does not need to be mutable
   --> src\main.rs:706:56
    |
706 | fn net_log_connection(mut prev: ResMut<ConnStatePrev>, mut client: ResMut<RenetClient>) {
    |                                                        ----^^^^^^
    |                                                        |
    |                                                        help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0499`.
warning: `bevy-online-campus` (bin "server") generated 3 warnings
error: could not compile `bevy-online-campus` (bin "server") due to 1 previous error; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
For more information about this error, try `rustc --explain E0277`.
warning: `bevy-online-campus` (bin "bevy-online-campus") generated 8 warnings
error: could not compile `bevy-online-campus` (bin "bevy-online-campus") due to 1 previous error; 8 warnings emitted